[tool.poetry]
name = "xcservice"
version = "0.1.0"
description = ""
authors = ["Li Ke"]


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
gino = {extras = ["pg", "starlette"], version = "^1.0.1"}
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
pydantic = {extras = ["email"], version = "^1.10.9"}

[tool.poetry.dev-dependencies]
pytest-cov = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
